[package]
name = "roguetop"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[features]
default = []
offline = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
lto = true
strip = "debuginfo"

[lib]
name = "roguetop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-shell = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.117"
dirs = "5.0.1"
chrono = "0.4.38"
colored = "2.1.0"
anyhow = "1.0.83"
thiserror = "1.0.60"
tiny_http = "0.12.0"
include-flate = "0.3.0"
rust-embed = "8.3.0"
mime_guess = "2.0.4"

