[package]
name = "roguetop"
version = "0.3.0"
description = "Online & Offline PokeRogue desktop client"
authors = ["SpikeHD"]
edition = "2021"

[features]
default = []
offline = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
lto = true
strip = "debuginfo"

[lib]
name = "roguetop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [ "devtools" ] }
tauri-plugin-shell = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.117"
dirs = "5.0.1"
chrono = "0.4.38"
colored = "2.1.0"
tiny_http = "0.12.0"
mime_guess = "2.0.4"
url-escape = "0.1.1"
once_cell = "1.19.0"
zip = "1.2.2"
reqwest = { version = "0.12.4", features = [ "blocking" ] }
open = "5.1.2"

